--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,8 +1,11 @@
 {
-  "extends": "@repo/typescript-config/nextjs.json",
+  "extends": [
+    "@repo/typescript-config/vite.json"
+  ],
+  "include": [
+    "src"
+  ],
   "compilerOptions": {
-    "plugins": [{ "name": "next" }]
-  },
-  "include": ["next-env.d.ts", "next.config.js", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+    "jsx": "react-jsx"
+  }
 }
