--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,20 +2,22 @@
   "name": "@repo/ui",
   "version": "0.0.0",
   "exports": {
-    "./button": "./src/button.tsx"
+    ".": "./index.ts",
+    "./button": "./components/button.tsx"
   },
   "scripts": {
     "lint": "eslint \"**/*.ts*\" --max-warnings 0"
   },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
   "devDependencies": {
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
-    "eslint": "^8.57.0",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "eslint": "^8.57.0",
     "typescript": "5.5.4"
-  },
-  "dependencies": {
-    "react": "^18.2.0"
   }
 }
