--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,11 +14,18 @@
     "preset": "@repo/jest-presets/node"
   },
   "dependencies": {
+    "@apollo/server": "^4.12.0",
     "@repo/logger": "workspace:*",
     "body-parser": "^1.20.2",
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "express": "^4.18.3",
-    "morgan": "^1.10.0"
+    "graphql": "^16.10.0",
+    "graphql-scalars": "^1.24.2",
+    "morgan": "^1.10.0",
+    "reflect-metadata": "^0.2.2",
+    "type-graphql": "2.0.0-rc.2",
+    "typedi": "^0.10.0"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
