--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,9 +10,12 @@
     "lint": "eslint \"src/**/*.ts\""
   },
   "dependencies": {
-    "@repo/ui": "workspace:*",
+    "@apollo/client": "^3.13.7",
+    "@tailwindcss/vite": "^4.1.3",
+    "graphql": "^16.10.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
