--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,9 +10,6 @@
     "start": "node -r esbuild-register ./src/index.ts",
     "test": "jest --detectOpenHandles"
   },
-  "jest": {
-    "preset": "@repo/jest-presets/node"
-  },
   "dependencies": {
     "@apollo/server": "^4.12.0",
     "@repo/logger": "workspace:*",
@@ -44,6 +41,7 @@
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "supertest": "^6.3.3",
+    "ts-node": "^10.9.2",
     "typescript": "5.5.4"
   }
 }
