--- a/packages/jest-presets/package.json
+++ b/packages/jest-presets/package.json
@@ -8,6 +8,7 @@
   ],
   "dependencies": {
     "jest": "^29.7.0",
-    "ts-jest": "^29.2.5"
+    "ts-jest": "^29.2.5",
+    "ts-node": "^10.9.2"
   }
 }
