--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,12 +8,14 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint \"src/**/*.ts\"",
-    "test": "jest --config ./jest.config.json"
+    "test": "jest --config ./jest.config.json",
+    "start": "http-server ./dist -p 3000"
   },
   "dependencies": {
     "@apollo/client": "^3.13.7",
     "@tailwindcss/vite": "^4.1.3",
     "graphql": "^16.10.0",
+    "http-server": "^14.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^4.1.3"
