--- a/turbo.json
+++ b/turbo.json
@@ -3,12 +3,10 @@
   "tasks": {
     "build": {
       "inputs": ["$TURBO_DEFAULT$", ".env*"],
-      "outputs": ["dist/**", ".next/**", "!.next/cache/**", "public/dist/**"],
-      "dependsOn": ["^build"],
-      "env": ["NEXT_PUBLIC_API_HOST"]
+      "outputs": ["dist/**", "public/dist/**"],
+      "dependsOn": ["^build"]
     },
     "test": {
-      "outputs": ["coverage/**"],
       "dependsOn": []
     },
     "lint": {
